# udacity-robitics_software_engineer-home_service_robot

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/add_markers/: add_markers
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/pgm_map_creator/: request_publisher
devel/lib/pick_objects/: pick_objects
devel/lib/pkgconfig/: add_markers.pc  gmapping.pc  pgm_map_creator.pc  pick_objects.pc  turtlebot_bringup.pc  turtlebot_capabilities.pc  turtlebot_dashboard.pc  turtlebot_description.pc  turtlebot_gazebo.pc  turtlebot_interactive_markers.pc  turtlebot_rviz_launchers.pc  turtlebot_stage.pc  turtlebot_stdr.pc  turtlebot_teleop.pc
devel/lib/turtlebot_interactive_markers/: turtlebot_marker_server
devel/share/add_markers/cmake/: add_markersConfig.cmake
devel/share/gmapping/cmake/: gmappingConfig.cmake
devel/share/pgm_map_creator/cmake/: pgm_map_creatorConfig.cmake
devel/share/pick_objects/cmake/: pick_objectsConfig.cmake
devel/share/turtlebot_bringup/cmake/: turtlebot_bringupConfig.cmake
devel/share/turtlebot_capabilities/cmake/: turtlebot_capabilitiesConfig.cmake
devel/share/turtlebot_dashboard/cmake/: turtlebot_dashboardConfig.cmake
src/add_markers/: CMakeLists.txt
src/add_markers/src/: add_markers.cpp
src/map/: map.pgm  map.yaml
src/pick_objects/: CMakeLists.txt
src/pick_objects/src/: pick_objects.cpp
src/rvizConfig/: config.rviz
src/scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
src/worlds/: myworld.world
(+7 files in other folders)
